<resources>
    <string name="app_name">HealMaker</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an Account? <b>SIGN UP</b> </string>
    <string name="already_account">Already have an account? <b>SIGN IN</b> </string>
    <string name="forgot">FORGOT PASSWORD ?</string>
    <string name="or">OR</string>
    <string name="submit">SUBMIT</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="title_activity_sign_up">SignUp</string>

    <string name="name_hint">Name</string>
    <string name="cc_hint">CC</string>
    <string name="mobile_hint">Mobile (3121234567)</string>
    <string name="home_town_hint">Home Town</string>
    <string name="email_hint">Email</string>
    <string name="name_hint_source">Name</string>
    <string name="pin_code_hint">Pin Code</string>
    <string name="contact_hint">Contact number</string>
    <string name="password_hint">Password</string>
    <string name="new_password_hint">New Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="company_hint">Company</string>
    <string name="designation_hint">Designation</string>
    <string name="department_hint">Department</string>
    <string name="next_btn_text">NEXT</string>
    <string name="sign_up">SIGN UP</string>


</resources>
